--- a/time-off-management/src/main/resources/templates/admin-home.html
+++ b/time-off-management/src/main/resources/templates/admin-home.html
@@ -8,40 +8,95 @@
 <meta name="_csrf_header" th:content="${_csrf.headerName}" />
 <title>Title</title>
 <style>
-    .rounded-circle {
-            width: 50px;
-            height: 50px;
-        }
+.rounded-circle {
+	width: 50px;
+	height: 50px;
+}
 
-        select:disabled {
-            background-color: #cccccc !important;
-            /* Gray background for disabled select */
-            color: #666666 !important; /* Gray text for disabled select */
-            cursor: not-allowed; /* Change cursor to not-allowed */
-        }
+select:disabled {
+	background-color: #cccccc !important;
+	/* Gray background for disabled select */
+	color: #666666 !important; /* Gray text for disabled select */
+	cursor: not-allowed; /* Change cursor to not-allowed */
+}
 
-        #leaveRequests {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 16px; /* Adjust gap value as needed */
-        }
+#leaveRequests {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 16px; /* Adjust gap value as needed */
+}
 
-        .col-md-4 {
-            flex: 1 1 30%; /* Adjust the basis value (30%) as needed */
-            max-width: 30%;
-            display: flex;
-        }
-        
-          .card-wrapper {
-            flex: 1 1 calc(33.333% - 16px); /* Adjust the basis value (33.333%) and gap value (16px) as needed */
-            max-width: calc(33.333% - 16px);
-        }
-        
-        
-        .card {
-            display: flex;
-            flex-direction: column;
-        }
+.col-md-4 {
+	flex: 1 1 30%; /* Adjust the basis value (30%) as needed */
+	max-width: 30%;
+	display: flex;
+}
+
+.card-wrapper {
+	flex: 1 1 calc(33.333% - 16px);
+	/* Adjust the basis value (33.333%) and gap value (16px) as needed */
+	max-width: calc(33.333% - 16px);
+}
+
+.card {
+	display: flex;
+	flex-direction: column;
+}
+
+
+.row {
+    --bs-gutter-x: 4rem !important;
+    }
+
+.mb-5 {
+	margin-bottom: 5rem !important;
+}
+
+.ml-5{
+	margin-left: 2rem;
+}
+
+.flex{
+	display: flex;
+}
+
+.gutter{
+    --bs-gutter-x: 0.5rem !important;
+
+} 
+
+
+label{
+	color:black;
+	margin-left:10px;
+	font-size: 13px;
+	font-family: sans-serif;
+}
+          
+.btn-search {
+	margin-left: 15px;
+	margin-top:27px;
+	background-color: #55ad9b;
+	color: #000;
+	border: none;
+	padding: 8px 20px;
+	border-radius: 5px;
+	cursor: pointer;
+	transition: background-color 0.3s, transform 0.3s;
+	text-decoration: none;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+   
+   
+.btn-search i {
+    margin-right: 5px; /* Adjust the spacing between icon and text */
+    vertical-align: middle; /* Ensure vertical alignment */
+}
+
+   
+
 </style>
 </head>
 <body>
@@ -85,88 +140,112 @@
 			</nav>
 		</header>
 
-		<div class="row px-5 mt-4">
-			<div class="form-group search">
-				<input type="text" class="form-control" placeholder="Search leaves">
+		<div class="row ml-5 mt-4 mb-5">
+			<form th:action="@{/home}" method="get">
+					
+				<div class="row px-5 mt-4 flex">
+					
+					<div class="col-3 form-group search">
+						<label for="fromDate">From Date </label> <input type="date"
+							name="fromDate" class="form-control"  th:value="${fromDate}" >
+					</div>
+					<div class="col-3 form-group search">
+					<label for="toDate">To Date </label>
+						<input type="date" name="toDate" class="form-control"
+							placeholder="To Date"  th:value="${toDate}">
+					</div>
+					<div class="col-3 form-group search">
+					<label for="leaveType">Type </label>
+						<select name="leaveType" class="form-control">
+							<option value="">Select Leave Type</option>
+							<option value="Sick Leave"  th:selected="${leaveType == 'Sick Leave'}">Sick Leave</option>
+							<option value="Vacation Leave"  th:selected="${leaveType == 'Vacation Leave'}">Vacation Leave</option>
+						</select>
+					</div>
+
+					<div class="col-3 form-group search gutter">
+						<button type="submit" class="btn-search"><i class="fas fa-search"></i>Search</button>
+					</div>
+				</div>
+			</form>
+		</div>
+
+		<div class="row mt-5" id="noRequests" style="display: none;">
+			<div class="col-1"></div>
+			<div class="col-10 nocard">
+				<h5>No Pending Leave Requests</h5>
+				<p>There are currently no pending leave requests.</p>
+			</div>
+			<div class="col-1"></div>
+		</div>
+
+		<div class="mt-5 px-4 mx-3" style="margin-left: 0px;">
+			<div class="container">
+				<div id="leaveRequests">
+					<div class="card-wrapper"
+						th:each="leaveApplication : ${leaveApplications}">
+						<div class="card" th:id="'card-' + ${leaveApplication.id}">
+							<div class="card-header" style="background-color: #55ad9b;">
+								<img
+									src="https://th.bing.com/th/id/OIP.7-nrY0zazKLS9ishJd-17wHaGh?w=164&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7"
+									alt="User Icon">
+								<h5 class="card-title">Leave Request</h5>
+							</div>
+							<div class="card-body">
+								<p class="card-text">
+									<strong>Apply At:</strong> <span
+										th:text="${leaveApplication.applyAt}"></span>
+								</p>
+								<p class="card-text">
+									<strong>Name:</strong> <span
+										th:text="${leaveApplication.employeeName}"></span>
+								</p>
+								<p class="card-text">
+									<strong>Department:</strong> <span
+										th:text="${leaveApplication.departmentName}"></span>
+								</p>
+								<p class="card-text">
+									<strong>Leave Type:</strong> <span
+										th:text="${leaveApplication.leaveTypeName}"></span>
+								</p>
+								<p class="card-text">
+									<strong>Start Date:</strong> <span
+										th:text="${leaveApplication.startDate}"></span>
+								</p>
+								<p class="card-text">
+									<strong>End Date:</strong> <span
+										th:text="${leaveApplication.endDate}"></span>
+								</p>
+								<p class="card-text">
+									<strong>Remark:</strong> <span
+										th:text="${leaveApplication.remark}"></span>
+								</p>
+								<div class="card-footer" style="background-color: #d8efd3;">
+									<div class="status-dropdown" style="background-color: #55ad9b;">
+										<select id="statusSelect" class="form-control"
+											th:data-id="${leaveApplication.id}"
+											onchange="changeStatus(this)"
+											th:disabled="${leaveApplication.employeeName == name}">
+											<option value="PENDING"
+												th:selected="${leaveApplication.status.name() == 'PENDING'}">PENDING
+											</option>
+											<option value="APPROVED"
+												th:selected="${leaveApplication.status.name() == 'APPROVED'}">APPROVED
+											</option>
+											<option value="REJECTED"
+												th:selected="${leaveApplication.status.name() == 'REJECTED'}">REJECTED
+											</option>
+										</select>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 
-		 <div class="row mt-5" id="noRequests" style="display: none;">
-        <div class="col-1"></div>
-        <div class="col-10 nocard">
-            <h5>No Pending Leave Requests</h5>
-            <p>There are currently no pending leave requests.</p>
-        </div>
-        <div class="col-1"></div>
-    </div>
-
-     <div class="mt-5 px-4 mx-3" style="margin-left: 0px;">
-        <div class="container">
-            <div id="leaveRequests">
-                <div class="card-wrapper"
-                     th:each="leaveApplication : ${leaveApplications}">
-                    <div class="card" th:id="'card-' + ${leaveApplication.id}">
-                        <div class="card-header" style="background-color: #55ad9b;">
-                            <img
-                                    src="https://th.bing.com/th/id/OIP.7-nrY0zazKLS9ishJd-17wHaGh?w=164&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7"
-                                    alt="User Icon">
-                            <h5 class="card-title">Leave Request</h5>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text">
-                                <strong>Apply At:</strong> <span
-                                    th:text="${leaveApplication.applyAt}"></span>
-                            </p>
-                            <p class="card-text">
-                                <strong>Name:</strong> <span
-                                    th:text="${leaveApplication.employeeName}"></span>
-                            </p>
-                            <p class="card-text">
-                                <strong>Department:</strong> <span
-                                    th:text="${leaveApplication.departmentName}"></span>
-                            </p>
-                            <p class="card-text">
-                                <strong>Leave Type:</strong> <span
-                                    th:text="${leaveApplication.leaveTypeName}"></span>
-                            </p>
-                            <p class="card-text">
-                                <strong>Start Date:</strong> <span
-                                    th:text="${leaveApplication.startDate}"></span>
-                            </p>
-                            <p class="card-text">
-                                <strong>End Date:</strong> <span
-                                    th:text="${leaveApplication.endDate}"></span>
-                            </p>
-                            <p class="card-text">
-                                <strong>Remark:</strong> <span
-                                    th:text="${leaveApplication.remark}"></span>
-                            </p>
-                            <div class="card-footer" style="background-color: #d8efd3;">
-                                <div class="status-dropdown" style="background-color: #55ad9b;">
-                                    <select id="statusSelect" class="form-control"
-                                            th:data-id="${leaveApplication.id}"
-                                            onchange="changeStatus(this)"
-                                            th:disabled="${leaveApplication.employeeName == name}">
-                                        <option value="PENDING"
-                                                th:selected="${leaveApplication.status.name() == 'PENDING'}">PENDING
-                                        </option>
-                                        <option value="APPROVED"
-                                                th:selected="${leaveApplication.status.name() == 'APPROVED'}">APPROVED
-                                        </option>
-                                        <option value="REJECTED"
-                                                th:selected="${leaveApplication.status.name() == 'REJECTED'}">REJECTED
-                                        </option>
-                                    </select>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script>
+		<script>
         function getCsrfToken() {
             return document.querySelector('meta[name="_csrf"]').getAttribute('content');
         }
@@ -216,6 +295,6 @@
 
         document.addEventListener('DOMContentLoaded', checkPendingRequests);
     </script>
-</section>
+	</section>
 </body>
 </html>
