--- a/time-off-management/src/main/resources/templates/login.html
+++ b/time-off-management/src/main/resources/templates/login.html
@@ -14,7 +14,7 @@
             padding: 0;
             font-family: 'Roboto', sans-serif;
             background: #d8efd3;
-            color: #55ad9b;
+            color: white;
             display: flex;
             justify-content: center;
             align-items: center;
